Use R5 Resource API as the RepoContentProvider model